deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /bookinfo
            pathType: Prefix
            backend:
              service:
                name: bookinfo
                port:
                  number: 80 # 对应service定义的集群内端口
